2001-09-04  Eric Blake  <ebb9@email.byu.edu>
	
	* src/body.cpp (ProcessSynchronizedStatement)
	(ProcessTryStatement): Fix VerifyErrors caused
	by reusing local variables between try and
	finally blocks - patch 50, from bug 204.
	* src/bytecode.cpp (ProcessAbruptExit)
	(EmitSynchronizedStatement): Likewise.  Also
	optimized the emitted bytecode for synchronized.	

2001-09-03  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ProcessAssignmentExpression): Fix the regression
	caused by the patch committed 2001-05-06 - patch 118, from bug 493.

2001-09-02  Eric Blake  <ebb9@email.byu.edu>

	* src/stream.cpp (ProcessInputUnicode): Remove side effect from
	assert statement - patch 145, from bug 657.

2001-08-31  Chris Abbey  <jikes@cabbey.net>

	* README:
	* jikes.spec:
	* doc/jikes.1:
	* src/access.h:
	* src/ast.cpp:
	* src/ast.h:
	* src/body.cpp:
	* src/bytecode.cpp:
	* src/bytecode.h:
	* src/case.cpp:
	* src/case.h:
	* src/class.h:
	* src/control.cpp:
	* src/control.h:
	* src/decl.cpp:
	* src/definite.cpp:
	* src/depend.cpp:
	* src/depend.h:
	* src/diagnose.cpp:
	* src/diagnose.h:
	* src/double.cpp:
	* src/double.h:
	* src/dump.cpp:
	* src/error.cpp:
	* src/error.h:
	* src/expr.cpp:
	* src/getclass.cpp:
	* src/getclass.h:
	* src/incrmnt.cpp:
	* src/init.cpp:
	* src/java.g:
	* src/javaact.cpp:
	* src/javaact.h:
	* src/javadcl.h:
	* src/javadef.h:
	* src/javaprs.h:
	* src/javasym.h:
	* src/jikes.cpp:
	* src/long.cpp:
	* src/long.h:
	* src/lookup.cpp:
	* src/lookup.h:
	* src/lpginput.cpp:
	* src/lpginput.h:
	* src/modifier.cpp:
	* src/op.cpp:
	* src/op.h:
	* src/option.cpp:
	* src/option.h:
	* src/parser.cpp:
	* src/parser.h:
	* src/platform.cpp:
	* src/platform.h:
	* src/scanner.cpp:
	* src/scanner.h:
	* src/segment.cpp:
	* src/segment.h:
	* src/semantic.h:
	* src/set.cpp:
	* src/set.h:
	* src/spell.h:
	* src/stream.cpp:
	* src/stream.h:
	* src/symbol.cpp:
	* src/symbol.h:
	* src/system.cpp:
	* src/tab.cpp:
	* src/tab.h:
	* src/table.h:
	* src/tuple.h: